--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="villa agency">
 
 
-	<title>Guess</title>
+	<title>Guess Game</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="icon" type="image/x-icon" href="/images/favicon.svg">
 	<script defer type="text/javascript" src="js/script.js"></script>
@@ -77,9 +77,9 @@
 
 				<div id="trails">
 
-					<p id="trailsLeft">💯 Re-tries: &nbsp;</p>
+					<p id="trailsLeft">💯 Re-tries:&nbsp;</p>
 
-					<p id="highscore">🔥 Highscore:</p>
+					<p id="highscore">🔥 Highscore:&nbsp;</p>
 
 				</div>
 			</div>
