--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<form id="outputHolder">
 
 				<div id="output">
+					<div id="guessSymbol">?</div>
 					<p id="errorita">Error</p>
 					<p id="gameOver">Game Over</p>
 				</div>
